# DocServer

./: .gitignore  Makefile  README.md  compose-docs.yml  mkdocs.yml  pyproject.toml  requirements.txt  tox.ini
docs/: my_page.md
nginx/: nginx.conf
src/my_package/: my_module.py
