[project]
name = "docserver"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "docserver",
]
docs = [
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.11",
    "mkdocstrings[python]>=0.29.1",
]


[build-system]
requires = ["hatchling>=1.8.0", "hatch-vcs", "hatch-fancy-pypi-readme"]
build-backend = "hatchling.build"


[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"
fragments = [{ path = "README.md" }]

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/docserver/_version.py"
template = '''
version = "{version}"
'''

[tool.hatch.build.targets.sdist]
only-include = ["src", "pyproject.toml", "uv.lock"]

[tool.hatch.build.targets.wheel]
only-include = ["src"]
sources = ["src"]
